--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "wx"]
 	path = wx
 	url = https://github.com/wxWidgets/wxWidgets.git
+[submodule "src/common"]
+	path = src/common
+	url = https://github.com/wieslawsoltes/MfcToolkit.git
